Add caption text and resized image

--- a/index.html
+++ b/index.html
@@ -8,11 +8,29 @@
     <title>Sign Up Page</title>
 </head>
 <body>
-    <p>
-        This is not a real online service! 
-        You know you need something like this in your life to help you realize your deepest dreams. 
-        Sign up <em>now</em> to get started.
-    </p>
-    <p>You <em>know</em> you want to.</p>
+    <div class="main">
+        <div class="left">
+            <img src="/images/background.jpg" alt="Background image of plants" class="background">
+            <div class="img-caption">
+                <img src="/images/odin-lined.png" class="img-odin">
+                <div class="odin-text">
+                    ODIN
+                </div>
+            </div>
+        </div>
+        <div class="right">
+            <div class="top-text">
+                <p>
+                    This is not a real online service! 
+                    You know you need something like this in your life to help you realize your deepest dreams. 
+                    Sign up <em>now</em> to get started.
+                </p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
+            <div class="form">
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
