--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                     ODIN
                 </div>
             </div>
+            <div class="credit">
+                Photo by Halle West on Unsplash
+            </div>
         </div>
         <div class="right">
             <div class="top-text">
@@ -28,8 +31,40 @@
                 <p>You <em>know</em> you want to.</p>
             </div>
             <div class="form">
-
+                <div class="form-title">
+                    Let's do this!
+                </div>
+                <form>
+                    <div class="inputs">
+                        <div class="text">
+                            <label for="fname">FIRST NAME</label>
+                            <input type="text" id="fname" name="fname">
+                        </div>    
+                        <div class="text">
+                            <label for="lname">LAST NAME</label>
+                            <input type="text" id="lname" name="lname">  
+                        </div>
+                        <div class="text">
+                            <label for="email">EMAIL</label>
+                            <input type="email" id="email" name="email">  
+                        </div>
+                        <div class="text">
+                            <label for="phone">PHONE NUMBER</label>
+                            <input type="number" id="phone" name="phone">  
+                        </div>
+                        <div class="text">
+                            <label for="password">PASSWORD</label>
+                            <input type="password" id="password" name="password" required>
+                        </div> 
+                        <div class="text">
+                            <label for="verify-password">VERIFY PASSWORD</label>
+                            <input type="password" id="verify-password" name="verify-password">                  
+                        </div>
+                    </div>
+                    <input type="submit" value="Create Account" class="button">
+                </form>
             </div>
+            Already have an account? <a href="#">Log in</a>
         </div>
     </div>
 </body>
